--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ https://templatemo.com/tm-562-space-dynamic
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/images/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/images/team/team-1.pg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
@@ -446,7 +446,7 @@ https://templatemo.com/tm-562-space-dynamic
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/images/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/images/team/team-1.jpgg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
@@ -464,7 +464,7 @@ https://templatemo.com/tm-562-space-dynamic
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/images/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/images/team/team-3.jpgg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
